// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render a Caption bar with both credit and caption  1`] = `
Object {
  "component": <div>
    <div
      className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h"
    >
      <span
        className="htz-i"
      >
        The Caption
      </span>
      <span
        className="htz-j htz-k htz-l htz-e htz-f htz-g htz-h"
      >
        קרדיט: me
      </span>
    </div>
  </div>,
  "styles": ".htz-a{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex}.htz-b{font-weight:700}.htz-c{padding-right:1rem}.htz-d{color:#505050}.htz-i{margin-left:1rem}.htz-j{display:inline}.htz-k{flex-shrink:0}.htz-l{font-weight:300}@media (max-width: 79.9375em){.htz-e{font-size:2rem}.htz-f{line-height:1.5em}}@media (min-width: 80em){.htz-g{font-size:2rem}.htz-h{line-height:1.5em}}",
}
`;

exports[`should correctly render a Caption bar with only the caption, Left to right, and with dynamic background  1`] = `
Object {
  "component": <div>
    <div
      className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h htz-i"
    >
      <span
        className="htz-j"
      >
        The Caption
      </span>
      
    </div>
  </div>,
  "styles": ".htz-a{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex}.htz-b{font-weight:700}.htz-c{padding-right:1rem}.htz-j{margin-left:1rem}@media (max-width: 79.9375em){.htz-d{color:#0B7EB5}.htz-e{font-size:2rem}.htz-f{line-height:1.5em}}@media (min-width: 80em){.htz-g{color:#FFA6A6}.htz-h{font-size:2rem}.htz-i{line-height:1.5em}}",
}
`;

exports[`should correctly render a Caption bar with only the credit  1`] = `
Object {
  "component": <div>
    <div
      className="htz-a htz-b htz-c htz-d htz-e htz-f htz-g htz-h"
    >
      <span
        className="htz-i"
      />
      <span
        className="htz-j htz-k htz-l htz-e htz-f htz-g htz-h"
      >
        קרדיט: me
      </span>
    </div>
  </div>,
  "styles": ".htz-a{display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex}.htz-b{font-weight:700}.htz-c{padding-right:1rem}.htz-d{color:#505050}.htz-i{margin-left:1rem}.htz-j{display:inline}.htz-k{flex-shrink:0}.htz-l{font-weight:300}@media (max-width: 79.9375em){.htz-e{font-size:2rem}.htz-f{line-height:1.5em}}@media (min-width: 80em){.htz-g{font-size:2rem}.htz-h{line-height:1.5em}}",
}
`;

exports[`should render no Caption bar 1`] = `
Object {
  "component": <div />,
  "styles": "",
}
`;
